@@ -3,12 +3,12 @@ balancing-chemical-equations.name=Balancing Chemical Equations
 
 ammonia=Ammonia
 balanced=balanced
-balanceEquation=Balance Equation
 balanceScales=Balance Scales
+balancingGame=Balancing Game
 barCharts=Bar Charts
 check=Check
-game=Game
 hideMolecules=Hide molecules
+introduction=Introduction
 methane=Methane
 moleculesAreHidden=molecules are hidden
 next=Next
